--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   </head>
   <body>
+    {% include header.html %}
     {{ content }}
+    {% include slider.html %}
+
+    <div class="module001">
+      <a href="google.com" class="button">Request Graphik Type</a>
+    </div>
+
+
   </body>
 </html>
