--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -1,35 +1,71 @@
-@font-face {
-    font-family: "GraphikVF";
-    src: url("../../assets/css/Fonts/Graphik-Upright-VF.ttf");
-    font-weight: normal;
-    font-style: normal;
-
-    font-stretch: 75% 100%;
-    font-style: oblique 0deg 12deg;
-    font-weight: 100 900;
-    :root {
-        --text-weight: 500;
-        --text-width: 100;
-        --text-slant: 0;
-      }
-  }
+// @font-face {
+//     font-family: "GraphikVF";
+//     src: url("../../assets/css/Fonts/Graphik-Upright-VF.ttf");
+//     font-weight: normal;
+//     font-style: normal;
+//     font-stretch: 75% 100%;
+//     font-style: oblique 0deg 12deg;
+//     font-weight: 100 900;
+//     :root {
+//         --text-weight: 500;
+//         --text-width: 100;
+//         --text-slant: 0;
+//       }
+//   }
   
 
-  @font-face {
-    font-family: "GraphikVFi";
-    src: url("../../assets/css/Fonts/Graphik-Italic-VF.ttf");
-    font-weight: normal;
-    font-style: normal;
+//   @font-face {
+//     font-family: "GraphikVFi";
+//     src: url("../../assets/css/Fonts/Graphik-Italic-VF.ttf");
+//     font-weight: normal;
+//     font-style: normal;
 
-    font-stretch: 75% 100%;
-    font-style: oblique 0deg 12deg;
-    font-weight: 100 900;
-    :root {
-        --text-weight: 500;
-        --text-width: 100;
-        --text-slant: 0;
-      }
-  }
+//     font-stretch: 75% 100%;
+//     font-style: oblique 0deg 12deg;
+//     font-weight: 100 900;
+//     :root {
+//         --text-weight: 500;
+//         --text-width: 100;
+//         --text-slant: 0;
+//       }
+//   }
+
+
+
+
+  @font-face {
+    font-family: "GraphikVF";
+    // src: url("../../assets/css/Fonts/Graphik-Upright-VF.eot") format('embedded-opentype'); /* EDIT correction on this line */
+    src: url("../../assets/css/Fonts/Graphik-Upright-VF.woff2") format('woff2'), /* Modern Browsers */
+    url("../../assets/css/Fonts/Graphik-Upright-VF.ttf") format('truetype'); /* Safari, Android, iOS */
+    font-weight:normal;
+   font-style:normal;
+   font-stretch: 75% 100%;
+   font-style: oblique 0deg 12deg;
+   font-weight: 100 900;
+  //  :root {
+  //      --text-weight: 500;
+  //      --text-width: 100;
+  //      --text-slant: 0;
+  //    }
+ }
+
+ @font-face {
+  font-family: "GraphikVFi";
+  // src: url("../../assets/css/Fonts/Graphik-Italic-VF.eot") format('embedded-opentype'); /* EDIT correction on this line */
+  src: url("../../assets/css/Fonts/Graphik-Italic-VF.woff2") format('woff2'), /* Modern Browsers */
+  url("../../assets/css/Fonts/Graphik-Italic-VF.ttf") format('truetype'); /* Safari, Android, iOS */
+  font-weight:normal;
+ font-style:normal;
+ font-stretch: 75% 100%;
+ font-style: oblique 0deg 12deg;
+ font-weight: 100 900;
+//  :root {
+//      --text-weight: 500;
+//      --text-width: 100;
+//      --text-slant: 0;
+//    }
+}
   
 
   
