--- a/_sass/slider.scss
+++ b/_sass/slider.scss
@@ -101,7 +101,6 @@
     flex-direction: column;
     width: auto;
     position: relative;
-
     padding: 0px;
 
 }
@@ -263,3 +262,43 @@ input[type="range"]:focus::-ms-fill-lower {
 input[type="range"]:focus::-ms-fill-upper {
     background: $grey1200-opacity30;
 }
+
+
+
+
+
+@media only screen and (max-width: 768px) {
+    .font-parameters {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 32px;
+        grid-row-gap: 48px;
+        width: calc(100% - 64px);
+        max-width: 100%;
+        box-sizing: border-box;
+        padding: 0px;
+        margin: 0 auto;
+        position: sticky;
+        bottom: 12px;
+        background: none;
+        border-radius: 8px;
+    }
+
+
+    #preview-content {
+        /*font-family: 'Roboto Mono',monospace;*/
+        font-family: "GraphikVF";
+        font-stretch: 100%;
+        font-style: oblique 0deg;
+        font-weight: 400;
+        font-size: 90px;
+        letter-spacing: 0em;
+        line-height: 1.2em;
+        width: calc(100% - 64px);
+        margin: 64px auto;
+        // padding: 64px 0px;
+        box-sizing: border-box;
+        text-align: left;
+    }
+    
+  }
